Se agrega pantalla de usuarios + Router Outlet en app.component.html

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+/* ESTILOS GLOBALES */
+
+/* TAG */
+
+/* CLASS */
+.mb-1 {
+    margin-bottom: 1em;
+}
+
+.mt-1 {
+    margin-top: 1em;
+}
+
+/* ID */
+
+/* MEDIA */
