--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -1,3 +1,21 @@
-<p>
-  usuario works!
-</p>
+<div class="container">
+	<h3>Usuarios</h3>
+	
+	<table class="stripped highlight">
+	  <thead>
+		<tr>
+			<th>Id</th>
+			<th>Username</th>
+			<th>Acciones</th>
+		</tr>
+	  </thead>
+	
+	  <tbody>
+		<tr>
+		  <td></td>
+		  <td>Eclair</td>
+		  <td></td>
+		</tr>
+	  </tbody>
+	</table>
+</div>
