--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div class="container mt-1 mb-1">
-    <button type="button" [routerLink]="['/usuarios']" routerLinkActive="router-link-active"  class="waves-effect waves-light btn">Usuarios</button>
-    <button type="button" class="waves-effect waves-light btn">Nuevo usuario</button>
+    <button type="button" [routerLink]="['/usuarios']" routerLinkActive="router-link-active"  class="waves-effect waves-light btn blue">Usuarios</button>
 </div>
 
 <router-outlet></router-outlet>
