--- a/src/app/crear-usuario/crear-usuario.component.html
+++ b/src/app/crear-usuario/crear-usuario.component.html
@@ -1,3 +1,34 @@
-<p>
-  crear-usuario works!
-</p>
+<div class="container">
+	<h3>Crear usuario</h3>
+	
+	<div *ngIf="!valido" class="row">
+		<div class="col s12">
+			<div class="card red lighten-1">
+				<div class="card-content white-text">
+					<p class="center-align">{{mensaje}}</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<form class="col s12">
+			<div class="row">
+				<div class="input-field col s12 m6">
+					<input type="text" id="username" name="username" class="validate" [(ngModel)]="usuario.username" required/>
+					<label for="username">Username</label>
+				</div>
+				<div class="input-field col s12 m6">
+					<input type="password" id="password" name="password" class="validate" [(ngModel)]="usuario.password" required/>
+					<label for="password">Password</label>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col s12">
+					<button type="button" [routerLink]="['/usuarios']" routerLinkActive="router-link-active"  class="btn red">Cancelar</button>
+					<button type="submit" (click)="guardar()" class="btn">Guardar</button>
+				</div>
+			</div>
+		</form>
+	</div>
+</div>
